update chiseled base

--- a/src/DockerfileApi
+++ b/src/DockerfileApi
@@ -1,5 +1,5 @@
 ﻿# Use the official ASP.NET Core runtime as a base for final app
-FROM mcr.microsoft.com/dotnet/aspnet:10.0-noble-chiseled AS base
+FROM mcr.microsoft.com/dotnet/aspnet:10.0-noble-chiseled-extra AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
