--- a/src/SportsData.Provider/Properties/launchSettings.json
+++ b/src/SportsData.Provider/Properties/launchSettings.json
@@ -108,6 +108,19 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5205"
+    },
+    "http.FootballNcaa.Dev": {
+      "commandName": "Project",
+      "commandLineArgs": "-mode FootballNcaa",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SERVICE_MODE": "All",
+        "APPCONFIG_LABEL": "Dev"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5205"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
