fix failing test and report code coverage

--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -83,9 +83,16 @@ stages:
             inputs:
               command: 'test'
               projects: '**/SportsData.Api.Tests.Unit.csproj'
+              arguments: '--no-build --collect:"XPlat Code Coverage"'
+              publishTestResults: true
               testRunTitle: 'api-tests-unit'
-              arguments: '--no-build'
             continueOnError: false
+
+          - task: PublishCodeCoverageResults@2
+            displayName: 'Publish Code Coverage'
+            inputs:
+              summaryFileLocation: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
+              failIfCoverageEmpty: false
 
   - stage: BuildImagePushACR
     displayName: 'Build Image & Push to ACR'
