--- a/src/UI/sd-ui/nginx.conf
+++ b/src/UI/sd-ui/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
@@ -8,26 +8,36 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/rss+xml application/json;
 
     # React Router - serve index.html for all routes
     location / {
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        
         try_files $uri $uri/ /index.html;
     }
 
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
     # Don't cache index.html
     location = /index.html {
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        
         add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 }
