--- a/src/UI/sd-ui/azure-pipelines.yml
+++ b/src/UI/sd-ui/azure-pipelines.yml
@@ -21,7 +21,9 @@ pool:
     - Agent.Name -equals Bender
 
 resources:
-  - repo: self
+  repositories:
+  - repository: self
+    type: git
 
 variables:
   # Container registry service connection established during pipeline creation
@@ -78,6 +80,7 @@ stages:
               dockerfile: $(dockerfilePath)
               containerRegistry: $(dockerRegistryServiceConnection)
               buildContext: '$(Build.SourcesDirectory)/src/UI/sd-ui'
+              arguments: '--build-arg REACT_APP_API_BASE_URL=https://api.sportdeets.com --build-arg REACT_APP_ENVIRONMENT=production --build-arg REACT_APP_PROD_URL=https://sportdeets.com --build-arg REACT_APP_GOOGLE_MAPS_API_KEY=$(REACT_APP_GOOGLE_MAPS_API_KEY)'
               tags: |
                 $(tag)
                 latest
