--- a/src/UI/sd-ui/nginx.conf
+++ b/src/UI/sd-ui/nginx.conf
@@ -12,20 +12,14 @@ server {
 
     # React Router - serve index.html for all routes
     location / {
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        include security-headers.conf;
         
         try_files $uri $uri/ /index.html;
     }
 
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        include security-headers.conf;
         
         expires 1y;
         add_header Cache-Control "public, immutable";
@@ -33,10 +27,7 @@ server {
 
     # Don't cache index.html
     location = /index.html {
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.sportdeets.com https://api-int.sportdeets.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
+        include security-headers.conf;
         
         add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
