prevent ui from triggering others

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ trigger:
       - 'SportsData.Provider/*'
       - 'SportsData.Season/*'
       - 'SportsData.Venue/*'
+      - 'src/UI/**'
 
 pool:
   vmImage: 'ubuntu-latest'
